--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.8.16, 3.9.16]
+        python-version: [3.8.16, 3.9.16, 3.12.3]
 
     steps:
     - uses: actions/checkout@v3
@@ -26,5 +26,16 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install flake8 black
+    - name: Run Flake8
+      run: |
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=88 --statistics
+    - name: Run Black Check
+      run: |
+        black --check . --line-length=88 --exclude='\(migrations\|__pycache__\|venv\|env\|.venv\)'
+    - name: Run Django Tests
+      run: |
+        python manage.py test --noinput
     - name: Save Setup-Python Name
       run: echo "SETUP_PYTHON_${{ matrix.python-version }}_NAME=${{ steps.setup-python.outputs.python-version }}" >> $GITHUB_STATE
