--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -13,11 +13,12 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.7, 3.8, 3.9, 3.12]
+        python-version: [3.8.16, 3.9.16, 3.12.3]
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
+      id: setup-python
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
@@ -25,6 +26,16 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Run Tests
+        pip install flake8 black
+    - name: Run Flake8
       run: |
-        python manage.py test
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=88 --statistics
+    - name: Run Black Check
+      run: |
+        black --check . --line-length=88 --exclude='\(migrations\|__pycache__\|venv\|env\|.venv\)'
+    - name: Run Django Tests
+      run: |
+        python manage.py test --noinput
+    - name: Save Setup-Python Name
+      run: echo "SETUP_PYTHON_${{ matrix.python-version }}_NAME=${{ steps.setup-python.outputs.python-version }}" >> $GITHUB_STATE
