--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.8.16, 3.9.16, 3.12.3]
+        python-version: [3.10.13, 3.11.9, 3.12.3]
 
     steps:
     - uses: actions/checkout@v3
@@ -32,8 +32,17 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt || (sleep 10 && pip install -r requirements.txt)
+        echo "Python version: $(python --version)"
+        
+        # Try to install requirements, retry if fails
+        pip install -r requirements.txt || (sleep 10 && pip install -r requirements.txt) || (
+          echo "Failed to install requirements, trying alternative approach..."
+          pip install Django==5.2.8 asgiref>=3.10.0,<3.12.0 djangorestframework>=3.16.1 && 
+          pip install -r requirements.txt --ignore-installed
+        )
+        
         pip install flake8 black
+        echo "Django version: $(python -c 'import django; print(django.__version__)')"
     - name: Run Flake8
       run: |
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
