--- a/static/frontend/reddit-app/angular/package.json
+++ b/static/frontend/reddit-app/angular/package.json
@@ -30,7 +30,8 @@
     "@angular/platform-browser-dynamic": "~10.2.5",
     "@angular/router": "~10.2.5",
     "@thisissoon/angular-timesince": "^2.1.0",
-    "angular-froala-wysiwyg": "^4.0.14",
+    "angular-froala-wysiwyg": "3.2.6",
+    "froala-editor": "3.2.6",
     "ngx-cookie-service": "^10.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
