--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -56,6 +56,6 @@ jobs:
         echo "Black formatting check passed!"
     - name: Run Django Tests
       run: |
-        python manage.py test --noinput
+        python -m pytest --noinput
     - name: Save Setup-Python Name
       run: echo "SETUP_PYTHON_${{ matrix.python-version }}_NAME=${{ steps.setup-python.outputs.python-version }}" >> $GITHUB_STATE
